--- a/SimpleGameEngine/SimpleGameEngine.vcxproj
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj
@@ -31,6 +31,7 @@
     <ClInclude Include="src\SimpleGameEngine\Math\Vec2.h" />
     <ClInclude Include="src\SimpleGameEngine\Math\Vec3.h" />
     <ClInclude Include="src\SimpleGameEngine\Math\Vec4.h" />
+    <ClInclude Include="src\SimpleGameEngine\Loaders\TextureLoadException.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\SimpleGameEngine\Loaders\LoadUniformException.cpp" />
@@ -50,6 +51,7 @@
     <ClCompile Include="src\SimpleGameEngine\Math\Vec2.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Math\Vec3.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Math\Vec4.cpp" />
+    <ClCompile Include="src\SimpleGameEngine\Loaders\TextureLoadException.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="src\SimpleGameEngine\Shaders\entityFragment.frag" />
