Changed name of Model to GeometryModel and added SpaceModel.

--- a/SimpleGameEngine/SimpleGameEngine.vcxproj
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\SimpleGameEngine\Models\SpaceModel.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\LightingModel.h" />
     <ClInclude Include="src\SimpleGameEngine\Loaders\LoadUniformException.h" />
     <ClInclude Include="src\SimpleGameEngine\Loaders\ShaderCompileException.h" />
@@ -21,7 +22,7 @@
     <ClInclude Include="src\SimpleGameEngine\Models\DynamicEntity.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\Entity.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\Material.h" />
-    <ClInclude Include="src\SimpleGameEngine\Models\Model.h" />
+    <ClInclude Include="src\SimpleGameEngine\Models\GeometryModel.h" />
     <ClInclude Include="src\SimpleGameEngine\Shaders\Shader.h" />
     <ClInclude Include="src\SimpleGameEngine\Display\DisplayException.h" />
     <ClInclude Include="src\SimpleGameEngine\Display\Window.h" />
@@ -41,6 +42,7 @@
     <ClInclude Include="src\SimpleGameEngine\Loaders\TextureLoadException.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\SimpleGameEngine\Models\SpaceModel.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\LightingModel.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Loaders\LoadUniformException.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Loaders\ShaderCompileException.cpp" />
@@ -51,7 +53,7 @@
     <ClCompile Include="src\SimpleGameEngine\Models\DynamicEntity.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\Entity.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\Material.cpp" />
-    <ClCompile Include="src\SimpleGameEngine\Models\Model.cpp" />
+    <ClCompile Include="src\SimpleGameEngine\Models\GeometryModel.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Shaders\Shader.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Display\DisplayException.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Display\Window.cpp" />
