--- a/SimpleGameEngine/SimpleGameEngine.vcxproj
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\SimpleGameEngine\Models\ModelTransformer.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\RenderModel.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\SpaceModel.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\LightingModel.h" />
@@ -20,7 +21,6 @@
     <ClInclude Include="src\SimpleGameEngine\IO\FileUtils.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\BoundingBox.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\Camera.h" />
-    <ClInclude Include="src\SimpleGameEngine\Models\DynamicEntity.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\Entity.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\Material.h" />
     <ClInclude Include="src\SimpleGameEngine\Models\GeometryModel.h" />
@@ -43,6 +43,7 @@
     <ClInclude Include="src\SimpleGameEngine\Loaders\TextureLoadException.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\SimpleGameEngine\Models\ModelTransformer.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\RenderModel.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\SpaceModel.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\LightingModel.cpp" />
@@ -52,7 +53,6 @@
     <ClCompile Include="src\SimpleGameEngine\IO\FileUtils.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\BoundingBox.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\Camera.cpp" />
-    <ClCompile Include="src\SimpleGameEngine\Models\DynamicEntity.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\Entity.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\Material.cpp" />
     <ClCompile Include="src\SimpleGameEngine\Models\GeometryModel.cpp" />
