--- a/SimpleGameEngine/SimpleGameEngine.vcxproj.filters
+++ b/SimpleGameEngine/SimpleGameEngine.vcxproj.filters
@@ -102,7 +102,10 @@
     <ClInclude Include="src\SimpleGameEngine\Models\RenderModel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="src\SimpleGameEngine\Models\ModelTransformer.h">
+    <ClInclude Include="src\SimpleGameEngine\Logic\ModelTransformer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\SimpleGameEngine\Logic\IntersectionTester.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
@@ -185,7 +188,10 @@
     <ClCompile Include="src\SimpleGameEngine\Models\RenderModel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\SimpleGameEngine\Models\ModelTransformer.cpp">
+    <ClCompile Include="src\SimpleGameEngine\Logic\ModelTransformer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\SimpleGameEngine\Logic\IntersectionTester.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
